--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "lint-staged": "^11.1.2",
+    "naive-ui": "^2.34.3",
     "stylus": "^0.55.0",
     "stylus-loader": "^6.1.0",
     "typescript": "~4.5.5"
