--- a/package.json
+++ b/package.json
@@ -3,34 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "vite lint"
   },
   "dependencies": {
-    "@vueuse/core": "^10.1.0",
+    "@types/node": "^20.2.5",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vueuse/core": "^10.1.2",
+    "@vueuse/integrations": "^10.1.2",
+    "@vueuse/router": "^10.1.2",
     "core-js": "^3.8.3",
+    "universal-cookie": "^4.0.4",
+    "vite": "^4.3.9",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
+    "vue-meta": "^3.0.0-alpha.10",
+    "vue-router": "4",
     "vue-turnstile": "^1.0.0",
+    "vue3-aplayer": "^1.7.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.3",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-pwa": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vicons/ionicons5": "^0.12.0",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
@@ -39,7 +40,6 @@
     "naive-ui": "^2.34.3",
     "prettier": "^2.8.8",
     "stylus": "^0.55.0",
-    "stylus-loader": "^6.1.0",
     "typescript": "~4.5.5"
   },
   "gitHooks": {
