--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite": "^4.3.9",
     "vue": "^3.2.13",
     "vue-meta": "^3.0.0-alpha.10",
+    "vue-request": "^2.0.3",
     "vue-router": "4",
     "vue-turnstile": "^1.0.0",
     "vue3-aplayer": "^1.7.3",
