--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vueuse/integrations": "^10.1.2",
     "@vueuse/router": "^10.1.2",
     "core-js": "^3.8.3",
+    "grapheme-splitter": "^1.0.4",
     "universal-cookie": "^4.0.4",
     "vite": "^4.3.9",
     "vue": "^3.2.13",
