--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/router": "^10.1.2",
     "core-js": "^3.8.3",
     "grapheme-splitter": "^1.0.4",
+    "linqts": "^1.15.0",
     "universal-cookie": "^4.0.4",
     "vite": "^4.3.9",
     "vue": "^3.2.13",
