--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@vueuse/integrations": "^10.1.2",
     "@vueuse/router": "^10.1.2",
     "core-js": "^3.8.3",
+    "date-fns": "^2.30.0",
+    "echarts": "^5.4.3",
     "grapheme-splitter": "^1.0.4",
     "linqts": "^1.15.0",
     "universal-cookie": "^4.0.4",
     "vite": "^4.3.9",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.13",
+    "vue-echarts": "^6.6.1",
     "vue-meta": "^3.0.0-alpha.10",
     "vue-request": "^2.0.3",
     "vue-router": "4",
