--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.8.3",
     "date-fns": "^2.30.0",
     "echarts": "^5.4.3",
+    "file-saver": "^2.0.5",
     "grapheme-splitter": "^1.0.4",
     "linqts": "^1.15.0",
     "universal-cookie": "^4.0.4",
