add questionbox share card

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "echarts": "^5.4.3",
     "file-saver": "^2.0.5",
     "grapheme-splitter": "^1.0.4",
+    "html2canvas": "^1.4.1",
     "linqts": "^1.15.0",
+    "qrcode.vue": "^3.4.1",
     "universal-cookie": "^4.0.4",
     "vite": "^4.3.9",
     "vite-svg-loader": "^4.0.0",
