--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "naive-ui": "^2.34.3",
     "prettier": "^2.8.8",
     "stylus": "^0.55.0",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vite-plugin-mkcert": "^1.16.0"
   }
 }
