--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vueuse/router": "^10.1.2",
     "core-js": "^3.8.3",
     "date-fns": "^2.30.0",
+    "easy-speech": "^2.2.0",
     "echarts": "^5.4.3",
     "fast-xml-parser": "^4.3.2",
     "file-saver": "^2.0.5",
@@ -25,6 +26,7 @@
     "linqts": "^1.15.0",
     "mitt": "^3.0.1",
     "qrcode.vue": "^3.4.1",
+    "queue-typescript": "^1.0.1",
     "universal-cookie": "^4.0.4",
     "vite": "^4.3.9",
     "vite-svg-loader": "^4.0.0",
