--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "vite lint"
   },
   "dependencies": {
-    "@types/node": "^20.2.5",
+    "@types/node": "^20.10.5",
     "@vicons/fluent": "^0.12.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vueuse/core": "^10.1.2",
@@ -27,15 +27,15 @@
     "mitt": "^3.0.1",
     "qrcode.vue": "^3.4.1",
     "queue-typescript": "^1.0.1",
-    "universal-cookie": "^4.0.4",
-    "vite": "^4.3.9",
-    "vite-svg-loader": "^4.0.0",
-    "vue": "^3.2.13",
-    "vue-echarts": "^6.6.1",
+    "universal-cookie": "^6.1.1",
+    "vite": "^5.0.10",
+    "vite-svg-loader": "^5.1.0",
+    "vue": "^3.3.12",
+    "vue-echarts": "^6.6.5",
     "vue-meta": "^3.0.0-alpha.10",
     "vue-request": "^2.0.3",
     "vue-router": "4",
-    "vue-turnstile": "^1.0.0",
+    "vue-turnstile": "^1.0.6",
     "vue3-aplayer": "^1.7.3",
     "vue3-marquee": "^4.1.0",
     "vueuc": "^0.4.51",
@@ -44,22 +44,24 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.3",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "@vicons/ionicons5": "^0.12.0",
-    "@vue/eslint-config-airbnb": "^6.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/eslint-config-airbnb": "^7.0.1",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.11.0",
-    "eslint-plugin-vuejs-accessibility": "^1.1.0",
-    "lint-staged": "^11.1.2",
+    "eslint-plugin-vuejs-accessibility": "^2.2.0",
+    "lint-staged": "^15.2.0",
     "naive-ui": "^2.34.3",
-    "prettier": "^2.8.8",
-    "stylus": "^0.55.0",
-    "typescript": "~4.5.5",
+    "prettier": "^3.1.1",
+    "stylus": "^0.62.0",
+    "typescript": "~5.3.3",
     "vite-plugin-mkcert": "^1.16.0"
   }
 }
