fix songlist export

--- a/package.json
+++ b/package.json
@@ -10,58 +10,48 @@
   },
   "dependencies": {
     "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@vicons/fluent": "^0.12.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vueuse/core": "^10.1.2",
-    "@vueuse/integrations": "^10.1.2",
     "@vueuse/router": "^10.1.2",
-    "core-js": "^3.8.3",
     "date-fns": "^2.30.0",
     "easy-speech": "^2.2.0",
     "echarts": "^5.4.3",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "fast-xml-parser": "^4.3.2",
     "file-saver": "^2.0.5",
     "grapheme-splitter": "^1.0.4",
     "html2canvas": "^1.4.1",
     "linqts": "^1.15.0",
     "mitt": "^3.0.1",
+    "prettier": "^3.1.1",
     "qrcode.vue": "^3.4.1",
     "queue-typescript": "^1.0.1",
-    "universal-cookie": "^6.1.1",
     "vite": "^5.0.10",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.3.12",
     "vue-echarts": "^6.6.5",
-    "vue-meta": "^3.0.0-alpha.10",
     "vue-request": "^2.0.3",
     "vue-router": "4",
     "vue-turnstile": "^1.0.6",
     "vue3-aplayer": "^1.7.3",
     "vue3-marquee": "^4.1.0",
     "vueuc": "^0.4.51",
-    "vuex": "^4.0.0",
     "worker-timers": "^7.0.78"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.3",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/eslint-config-airbnb": "^7.0.1",
     "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.11.0",
-    "eslint-plugin-vuejs-accessibility": "^2.2.0",
-    "lint-staged": "^15.2.0",
     "naive-ui": "^2.34.3",
-    "prettier": "^3.1.1",
     "stylus": "^0.62.0",
-    "typescript": "~5.3.3",
-    "vite-plugin-mkcert": "^1.16.0"
+    "typescript": "~5.3.3"
   }
 }
