--- a/package.json
+++ b/package.json
@@ -3,23 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "prebuild": "node gen-version.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "vite lint"
   },
   "dependencies": {
     "@types/node": "^20.10.5",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@vicons/fluent": "^0.12.0",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vueuse/core": "^10.1.2",
-    "@vueuse/router": "^10.1.2",
-    "date-fns": "^2.30.0",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "@vueuse/core": "^10.7.0",
+    "@vueuse/router": "^10.7.0",
+    "date-fns": "^3.0.5",
     "easy-speech": "^2.2.0",
     "echarts": "^5.4.3",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-prettier": "^5.1.1",
     "fast-xml-parser": "^4.3.2",
     "file-saver": "^2.0.5",
     "grapheme-splitter": "^1.0.4",
@@ -31,27 +30,28 @@
     "queue-typescript": "^1.0.1",
     "vite": "^5.0.10",
     "vite-svg-loader": "^5.1.0",
-    "vue": "^3.3.12",
+    "vue": "^3.3.13",
     "vue-echarts": "^6.6.5",
-    "vue-request": "^2.0.3",
-    "vue-router": "4",
+    "vue-request": "^2.0.4",
+    "vue-router": "^4.2.5",
     "vue-turnstile": "^1.0.6",
     "vue3-aplayer": "^1.7.3",
     "vue3-marquee": "^4.1.0",
-    "vueuc": "^0.4.51",
-    "worker-timers": "^7.0.78"
+    "vueuc": "^0.4.56",
+    "worker-timers": "^7.0.80"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.21.3",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@babel/eslint-parser": "^7.23.3",
+    "@typescript-eslint/parser": "^6.15.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "eslint": "^8.39.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-vue": "^9.11.0",
-    "naive-ui": "^2.34.3",
+    "eslint-plugin-vue": "^9.19.2",
+    "naive-ui": "^2.36.0",
     "stylus": "^0.62.0",
-    "typescript": "~5.3.3"
-  }
+    "typescript": "^5.3.3"
+  },
+  "packageManager": "yarn@4.0.2"
 }
