support use tts from api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
+    "allowJs": false,
     "sourceMap": false,
     "baseUrl": ".",
     "types": ["node"],
