--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html2canvas": "^1.4.1",
     "linqts": "^1.15.0",
     "mitt": "^3.0.1",
+    "pinia": "^2.1.7",
     "prettier": "^3.1.1",
     "qrcode.vue": "^3.4.1",
     "queue-typescript": "^1.0.1",
