--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "easy-speech": "^2.2.0",
     "echarts": "^5.4.3",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-oxlint": "^0.2.0",
     "eslint-plugin-prettier": "^5.1.2",
     "fast-xml-parser": "^4.3.2",
     "file-saver": "^2.0.5",
