--- a/package.json
+++ b/package.json
@@ -8,50 +8,52 @@
     "lint": "vite lint"
   },
   "dependencies": {
-    "@types/node": "^20.10.6",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@types/node": "^20.11.5",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@vicons/fluent": "^0.12.0",
-    "@vitejs/plugin-vue": "^5.0.1",
-    "@vueuse/core": "^10.7.1",
-    "@vueuse/router": "^10.7.1",
-    "date-fns": "^3.0.6",
-    "easy-speech": "^2.2.0",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vueuse/core": "^10.7.2",
+    "@vueuse/router": "^10.7.2",
+    "date-fns": "^3.2.0",
+    "easy-speech": "^2.3.1",
     "echarts": "^5.4.3",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-oxlint": "^0.2.0",
-    "eslint-plugin-prettier": "^5.1.2",
-    "fast-xml-parser": "^4.3.2",
+    "eslint-plugin-oxlint": "^0.2.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "fast-xml-parser": "^4.3.3",
     "file-saver": "^2.0.5",
     "grapheme-splitter": "^1.0.4",
     "html2canvas": "^1.4.1",
     "linqts": "^1.15.0",
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.4",
     "qrcode.vue": "^3.4.1",
     "queue-typescript": "^1.0.1",
-    "vite": "^5.0.10",
+    "uuid": "^9.0.1",
+    "vite": "^5.0.12",
     "vite-svg-loader": "^5.1.0",
-    "vue": "^3.4.1",
+    "vue": "^3.4.15",
     "vue-echarts": "^6.6.8",
     "vue-request": "^2.0.4",
     "vue-router": "^4.2.5",
-    "vue-turnstile": "^1.0.6",
+    "vue-turnstile": "^1.0.7",
     "vue3-aplayer": "^1.7.3",
-    "vue3-marquee": "^4.1.0",
+    "vue3-marquee": "^4.2.0-beta.1",
     "vueuc": "^0.4.58",
-    "worker-timers": "^7.0.80"
+    "worker-timers": "^7.1.1"
   },
   "devDependencies": {
-    "@types/eslint": "^8",
-    "@typescript-eslint/parser": "^6.16.0",
+    "@types/eslint": "^8.56.2",
+    "@types/uuid": "^9",
+    "@typescript-eslint/parser": "^6.19.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-vue": "^9.19.2",
-    "naive-ui": "^2.36.0",
+    "eslint-plugin-vue": "^9.20.1",
+    "naive-ui": "^2.37.3",
     "stylus": "^0.62.0",
     "typescript": "^5.3.3"
   },
