--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^3.2.4",
     "qrcode.vue": "^3.4.1",
     "queue-typescript": "^1.0.1",
+    "unplugin-vue-markdown": "^0.26.0",
     "uuid": "^9.0.1",
     "vite": "^5.0.12",
     "vite-svg-loader": "^5.1.0",
@@ -42,7 +43,8 @@
     "vue3-aplayer": "^1.7.3",
     "vue3-marquee": "^4.2.0-beta.1",
     "vueuc": "^0.4.58",
-    "worker-timers": "^7.1.1"
+    "worker-timers": "^7.1.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
