--- a/package.json
+++ b/package.json
@@ -8,53 +8,53 @@
     "lint": "vite lint"
   },
   "dependencies": {
-    "@types/node": "^20.11.5",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@types/node": "^20.11.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@vicons/fluent": "^0.12.0",
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vueuse/core": "^10.7.2",
     "@vueuse/router": "^10.7.2",
-    "date-fns": "^3.2.0",
+    "date-fns": "^3.3.1",
     "easy-speech": "^2.3.1",
-    "echarts": "^5.4.3",
+    "echarts": "^5.5.0",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-oxlint": "^0.2.1",
+    "eslint-plugin-oxlint": "^0.2.3",
     "eslint-plugin-prettier": "^5.1.3",
-    "fast-xml-parser": "^4.3.3",
+    "fast-xml-parser": "^4.3.4",
     "file-saver": "^2.0.5",
     "grapheme-splitter": "^1.0.4",
     "html2canvas": "^1.4.1",
     "linqts": "^1.15.0",
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "qrcode.vue": "^3.4.1",
     "queue-typescript": "^1.0.1",
     "unplugin-vue-markdown": "^0.26.0",
     "uuid": "^9.0.1",
-    "vite": "^5.0.12",
+    "vite": "^5.1.3",
     "vite-svg-loader": "^5.1.0",
-    "vue": "^3.4.15",
+    "vue": "^3.4.19",
     "vue-echarts": "^6.6.8",
     "vue-request": "^2.0.4",
     "vue-router": "^4.2.5",
-    "vue-turnstile": "^1.0.7",
+    "vue-turnstile": "^1.0.8",
     "vue3-aplayer": "^1.7.3",
-    "vue3-marquee": "^4.2.0-beta.1",
+    "vue3-marquee": "^4.2.0",
     "vueuc": "^0.4.58",
-    "worker-timers": "^7.1.1",
+    "worker-timers": "^7.1.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
-    "@types/uuid": "^9",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/parser": "^7.0.1",
     "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-vue": "^9.20.1",
+    "eslint-plugin-vue": "^9.21.1",
     "naive-ui": "^2.37.3",
     "stylus": "^0.62.0",
     "typescript": "^5.3.3"
