--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.1",
     "@types/eslint": "^8.56.2",
+    "@types/obs-studio": "^2.17.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/parser": "^7.0.1",
     "@vicons/ionicons5": "^0.12.0",
