--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html2canvas": "^1.4.1",
     "linqts": "^1.15.0",
     "mitt": "^3.0.1",
+    "music-metadata-browser": "^2.5.10",
     "pinia": "^2.1.7",
     "prettier": "^3.2.5",
     "qrcode.vue": "^3.4.1",
