--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vueuse/core": "^10.7.2",
     "@vueuse/router": "^10.7.2",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "date-fns": "^3.3.1",
     "easy-speech": "^2.3.1",
     "echarts": "^5.5.0",
