--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "queue-typescript": "^1.0.1",
     "unplugin-vue-markdown": "^0.26.2",
     "uuid": "^9.0.1",
-    "vite": "^5.2.9",
+    "vite": "^5.2.10",
     "vite-svg-loader": "^5.1.0",
-    "vue": "^3.4.23",
-    "vue-echarts": "^6.6.9",
+    "vue": "3.4.21",
+    "vue-echarts": "^6.6.10",
     "vue-request": "^2.0.4",
     "vue-router": "^4.3.2",
     "vue-turnstile": "^1.0.8",
