--- a/.github/workflows/bun.yml
+++ b/.github/workflows/bun.yml
@@ -1,12 +1,10 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Bun CI
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
     branches: [ "master" ]
 
 jobs:
@@ -17,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name:  Use bun
+    - name: Use bun
       uses: oven-sh/setup-bun@v2
 
     - name: 📥 Install dependencies
