--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
     "@microsoft/signalr-protocol-msgpack": "^8.0.7",
-    "@types/node": "^22.8.2",
-    "@typescript-eslint/eslint-plugin": "^8.12.1",
+    "@types/node": "^22.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@vicons/fluent": "^0.12.0",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/cli": "^5.0.8",
-    "@vueuse/core": "^11.1.0",
-    "@vueuse/router": "^11.1.0",
+    "@vueuse/core": "^11.2.0",
+    "@vueuse/router": "^11.2.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "date-fns": "^4.1.0",
     "easy-speech": "^2.4.0",
     "echarts": "^5.5.1",
-    "eslint": "^9.13.0",
+    "eslint": "^9.14.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-oxlint": "^0.10.1",
+    "eslint-plugin-oxlint": "^0.11.0",
     "eslint-plugin-prettier": "^5.2.1",
     "fast-xml-parser": "^4.5.0",
     "file-saver": "^2.0.5",
@@ -34,9 +35,10 @@
     "linqts": "^2.0.0",
     "mitt": "^3.0.1",
     "music-metadata-browser": "^2.5.11",
-    "pinia": "^2.2.4",
+    "peerjs": "^1.5.4",
+    "pinia": "^2.2.6",
     "prettier": "^3.3.3",
-    "qrcode.vue": "^3.5.1",
+    "qrcode.vue": "^3.6.0",
     "queue-typescript": "^1.0.1",
     "unplugin-vue-markdown": "^0.26.2",
     "uuid": "^11.0.2",
@@ -50,16 +52,16 @@
     "vue3-aplayer": "^1.7.3",
     "vue3-marquee": "^4.2.2",
     "vueuc": "^0.4.64",
-    "worker-timers": "^8.0.10",
+    "worker-timers": "^8.0.11",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
-    "@types/bun": "^1.1.12",
+    "@types/bun": "^1.1.13",
     "@types/eslint": "^9.6.1",
     "@types/obs-studio": "^2.17.2",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/parser": "^8.12.1",
+    "@typescript-eslint/parser": "^8.13.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vue/eslint-config-typescript": "^14.1.3",
