--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html2canvas": "^1.4.1",
     "linqts": "^2.0.0",
     "mitt": "^3.0.1",
+    "monaco-editor": "^0.52.0",
     "music-metadata-browser": "^2.5.11",
     "peerjs": "^1.5.4",
     "pinia": "^2.2.6",
@@ -43,6 +44,7 @@
     "unplugin-vue-markdown": "^0.26.2",
     "uuid": "^11.0.2",
     "vite": "^5.4.10",
+    "vite-plugin-monaco-editor": "^1.1.0",
     "vite-svg-loader": "^5.1.0",
     "vue": "3.5.12",
     "vue-echarts": "^7.0.3",
