--- a/package.json
+++ b/package.json
@@ -11,22 +11,24 @@
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
     "@microsoft/signalr-protocol-msgpack": "^8.0.7",
-    "@types/node": "^22.9.0",
-    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@mixer/postmessage-rpc": "^1.1.4",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@vicons/fluent": "^0.12.0",
-    "@vitejs/plugin-basic-ssl": "^1.1.0",
-    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-basic-ssl": "^1.2.0",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vue/cli": "^5.0.8",
-    "@vueuse/core": "^11.2.0",
-    "@vueuse/router": "^11.2.0",
+    "@vueuse/core": "^12.0.0",
+    "@vueuse/router": "^12.0.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
+    "bilibili-live-ws": "^6.3.1",
+    "brotli-compress": "^1.3.3",
     "date-fns": "^4.1.0",
     "easy-speech": "^2.4.0",
     "echarts": "^5.5.1",
-    "eslint": "^9.14.0",
+    "eslint": "^9.16.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-oxlint": "^0.11.0",
+    "eslint-plugin-oxlint": "^0.14.0",
     "eslint-plugin-prettier": "^5.2.1",
     "fast-xml-parser": "^4.5.0",
     "file-saver": "^2.0.5",
@@ -37,19 +39,19 @@
     "monaco-editor": "^0.52.0",
     "music-metadata-browser": "^2.5.11",
     "peerjs": "^1.5.4",
-    "pinia": "^2.2.6",
-    "prettier": "^3.3.3",
+    "pinia": "^2.2.8",
+    "prettier": "^3.4.1",
     "qrcode.vue": "^3.6.0",
     "queue-typescript": "^1.0.1",
-    "unplugin-vue-markdown": "^0.26.2",
-    "uuid": "^11.0.2",
-    "vite": "^5.4.10",
+    "unplugin-vue-markdown": "^0.27.1",
+    "uuid": "^11.0.3",
+    "vite": "5.4.11",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-svg-loader": "^5.1.0",
-    "vue": "3.5.12",
+    "vue": "3.5.13",
     "vue-echarts": "^7.0.3",
     "vue-request": "^2.0.4",
-    "vue-router": "^4.4.5",
+    "vue-router": "^4.5.0",
     "vue-turnstile": "^1.0.11",
     "vue3-aplayer": "^1.7.3",
     "vue3-marquee": "^4.2.2",
@@ -58,19 +60,19 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@types/bun": "^1.1.13",
+    "@eslint/eslintrc": "^3.2.0",
+    "@types/bun": "^1.1.14",
     "@types/eslint": "^9.6.1",
     "@types/obs-studio": "^2.17.2",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/parser": "^8.13.0",
+    "@typescript-eslint/parser": "^8.17.0",
     "@vicons/ionicons5": "^0.12.0",
-    "@vitejs/plugin-vue-jsx": "^4.0.1",
-    "@vue/eslint-config-typescript": "^14.1.3",
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "@vue/eslint-config-typescript": "^14.1.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-vue": "^9.30.0",
-    "naive-ui": "^2.40.1",
+    "eslint-plugin-vue": "^9.32.0",
+    "naive-ui": "^2.40.3",
     "stylus": "^0.64.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2"
   }
 }
