--- a/package.json
+++ b/package.json
@@ -9,43 +9,44 @@
     "lint": "vite lint"
   },
   "dependencies": {
+    "@hyperdx/browser": "^0.21.2",
     "@microsoft/signalr": "^8.0.7",
     "@microsoft/signalr-protocol-msgpack": "^8.0.7",
     "@mixer/postmessage-rpc": "^1.1.4",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
-    "@vicons/fluent": "^0.12.0",
-    "@vitejs/plugin-basic-ssl": "^1.2.0",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@vicons/fluent": "^0.13.0",
+    "@vitejs/plugin-basic-ssl": "^2.0.0",
+    "@vitejs/plugin-vue": "^5.2.3",
     "@vue/cli": "^5.0.8",
-    "@vueuse/core": "^12.0.0",
-    "@vueuse/router": "^12.0.0",
+    "@vueuse/core": "^13.0.0",
+    "@vueuse/router": "^13.0.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "bilibili-live-ws": "^6.3.1",
     "brotli-compress": "^1.3.3",
     "date-fns": "^4.1.0",
     "easy-speech": "^2.4.0",
-    "echarts": "^5.5.1",
-    "eslint": "^9.16.0",
+    "echarts": "^5.6.0",
+    "eslint": "^9.22.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-oxlint": "^0.14.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "fast-xml-parser": "^4.5.0",
+    "eslint-plugin-oxlint": "^0.16.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "fast-xml-parser": "^5.0.9",
     "file-saver": "^2.0.5",
     "grapheme-splitter": "^1.0.4",
     "html2canvas": "^1.4.1",
     "linqts": "^2.0.0",
     "mitt": "^3.0.1",
-    "monaco-editor": "^0.52.0",
+    "monaco-editor": "^0.52.2",
     "music-metadata-browser": "^2.5.11",
     "peerjs": "^1.5.4",
-    "pinia": "^2.2.8",
-    "prettier": "^3.4.1",
+    "pinia": "^3.0.1",
+    "prettier": "^3.5.3",
     "qrcode.vue": "^3.6.0",
     "queue-typescript": "^1.0.1",
-    "unplugin-vue-markdown": "^0.27.1",
-    "uuid": "^11.0.3",
-    "vite": "5.4.11",
+    "unplugin-vue-markdown": "^28.3.1",
+    "uuid": "^11.1.0",
+    "vite": "6.2.2",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-svg-loader": "^5.1.0",
     "vue": "3.5.13",
@@ -56,23 +57,23 @@
     "vue3-aplayer": "^1.7.3",
     "vue3-marquee": "^4.2.2",
     "vueuc": "^0.4.64",
-    "worker-timers": "^8.0.11",
+    "worker-timers": "^8.0.19",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@types/bun": "^1.1.14",
+    "@eslint/eslintrc": "^3.3.0",
+    "@types/bun": "^1.2.5",
     "@types/eslint": "^9.6.1",
     "@types/obs-studio": "^2.17.2",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/parser": "^8.17.0",
-    "@vicons/ionicons5": "^0.12.0",
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "@vue/eslint-config-typescript": "^14.1.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-vue": "^9.32.0",
-    "naive-ui": "^2.40.3",
+    "@typescript-eslint/parser": "^8.26.1",
+    "@vicons/ionicons5": "^0.13.0",
+    "@vitejs/plugin-vue-jsx": "^4.1.2",
+    "@vue/eslint-config-typescript": "^14.5.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-vue": "^10.0.0",
+    "naive-ui": "^2.41.0",
     "stylus": "^0.64.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.8.2"
   }
 }
