--- a/.github/workflows/bun.yml
+++ b/.github/workflows/bun.yml
@@ -22,3 +22,5 @@ jobs:
       run: bun install
     - name: 📦 Build
       run: bun run build
+    - name: 📦 Upload SourceMap
+      run: bunx @hyperdx/cli upload-sourcemaps --path dist\assets
