--- a/.github/workflows/bun.yml
+++ b/.github/workflows/bun.yml
@@ -23,4 +23,4 @@ jobs:
     - name: 📦 Build
       run: bun run build
     - name: 📦 Upload SourceMap
-      run: bunx @hyperdx/cli upload-sourcemaps --serviceKey ${{ secrets.HYPERDX_SERVICE_KEY }} --path dist\assets
+      run: bunx @hyperdx/cli upload-sourcemaps --serviceKey ${{ secrets.HYPERDX_SERVICE_KEY }} --path dist/assets
