--- a/.github/workflows/bun.yml
+++ b/.github/workflows/bun.yml
@@ -16,6 +16,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      packages: write
+
     steps:
     - uses: actions/checkout@v4
 
@@ -24,10 +28,13 @@ jobs:
 
     - name: 📥 Install dependencies
       run: bun install
+
     - name: 📦 Build
       run: bun run build
+
     - name: 📦 Upload SourceMap
       run: bunx @hyperdx/cli upload-sourcemaps --serviceKey ${{ secrets.HYPERDX_SERVICE_KEY }} --path dist/assets
+      
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
