更新项目配置，删除不必要的文件，优化依赖项，修复类型定义，添加新歌单样式

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@microsoft/signalr": "^8.0.7",
     "@microsoft/signalr-protocol-msgpack": "^8.0.7",
     "@mixer/postmessage-rpc": "^1.1.4",
+    "@tauri-apps/api": "^2.4.0",
+    "@tauri-apps/plugin-http": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@vicons/fluent": "^0.13.0",
     "@vitejs/plugin-basic-ssl": "^2.0.0",
