--- a/package.json
+++ b/package.json
@@ -16,7 +16,16 @@
     "@microsoft/signalr-protocol-msgpack": "^8.0.7",
     "@mixer/postmessage-rpc": "^1.1.4",
     "@tauri-apps/api": "^2.4.0",
+    "@tauri-apps/plugin-autostart": "^2.3.0",
     "@tauri-apps/plugin-http": "^2.4.2",
+    "@tauri-apps/plugin-log": "^2.3.1",
+    "@tauri-apps/plugin-notification": "^2.2.2",
+    "@tauri-apps/plugin-opener": "^2.2.6",
+    "@tauri-apps/plugin-os": "^2.2.1",
+    "@tauri-apps/plugin-process": "^2.2.1",
+    "@tauri-apps/plugin-store": "^2.2.0",
+    "@tauri-apps/plugin-updater": "^2.7.0",
+    "@types/crypto-js": "^4.2.2",
     "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@vicons/fluent": "^0.13.0",
     "@vitejs/plugin-basic-ssl": "^2.0.0",
@@ -28,6 +37,7 @@
     "@wangeditor/editor-for-vue": "^5.1.12",
     "bilibili-live-ws": "^6.3.1",
     "brotli-compress": "^1.3.3",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "easy-speech": "^2.4.0",
     "echarts": "^5.6.0",
