feat: 修复图片url, 开始弹幕机编写

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "env.d.ts",
     "default.d.ts",
     "src/data/chat/ChatClientDirectOpenLive.js",
-    "src/data/chat/models.js",
+    "src/data/chat/models.js", "src/store/useDanmakuClient.ts",
   ],
   "exclude": ["node_modules"]
 }
