--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@tauri-apps/plugin-store": "^2.2.0",
     "@tauri-apps/plugin-updater": "^2.7.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/md5": "^2.3.5",
     "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@vicons/fluent": "^0.13.0",
     "@vitejs/plugin-basic-ssl": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/cli": "^5.0.8",
     "@vueuse/core": "^13.0.0",
+    "@vueuse/integrations": "^13.1.0",
     "@vueuse/router": "^13.0.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
@@ -50,7 +52,9 @@
     "file-saver": "^2.0.5",
     "grapheme-splitter": "^1.0.4",
     "html2canvas": "^1.4.1",
+    "idb-keyval": "^6",
     "linqts": "^2.0.0",
+    "md5": "^2.3.0",
     "mitt": "^3.0.1",
     "monaco-editor": "^0.52.2",
     "music-metadata-browser": "^2.5.11",
@@ -85,7 +89,6 @@
     "@types/bun": "^1.2.5",
     "@types/eslint": "^9.6.1",
     "@types/file-saver": "^2.0.7",
-    "@types/node": "^22.14.1",
     "@types/obs-studio": "^2.17.2",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/parser": "^8.27.0",
