feat: 更新项目配置和组件，增强功能和用户体验
- 在 .gitignore 中添加了 .specstory 文件的忽略规则。
- 更新 tsconfig.json，修正了 vue-vine/types/macros 的引用路径。
- 在组件声明中新增了 NInput 组件的类型支持。
- 优化了 EventModel 接口，调整了 guard_level 的类型为 GuardLevel。
- 增加了 Follow 事件类型到 EventDataTypes 枚举中。
- 在 ClientAutoAction.vue 中引入了新的 store 和组件，增强了功能。
- 更新了多个设置组件，添加了关键词匹配类型和过滤模式的支持。
- 改进了模板编辑器和测试器的功能，支持更灵活的模板管理。
- 在弹幕客户端中新增了关注事件的处理逻辑，提升了事件响应能力。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "allowJs": false,
     "sourceMap": true,
     "baseUrl": ".",
-    "types": ["node", "vue-vine/types/macros"],
+    "types": ["node", "vue-vine/macros"],
     "paths": {
       "@/*": ["src/*"]
     },
