--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "fast-xml-parser": "^5.2.1",
     "file-saver": "^2.0.5",
     "grapheme-splitter": "^1.0.4",
+    "hammerjs": "^2.0.8",
     "html2canvas": "^1.4.1",
     "idb-keyval": "^6.2.1",
     "linqts": "^2.0.0",
@@ -66,6 +67,7 @@
     "prettier": "^3.5.3",
     "qrcode.vue": "^3.6.0",
     "queue-typescript": "^1.0.1",
+    "tui-image-editor": "^3.15.3",
     "unplugin-auto-import": "^19.1.2",
     "unplugin-vue-components": "^28.5.0",
     "unplugin-vue-markdown": "^28.3.1",
