--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "knip": "knip"
   },
   "dependencies": {
-    "@antfu/ni": "^24.3.0",
     "@guolao/vue-monaco-editor": "^1.5.5",
     "@hyperdx/browser": "^0.21.2",
     "@hyperdx/cli": "^0.1.0",
@@ -30,55 +29,44 @@
     "@tauri-apps/plugin-updater": "^2.7.1",
     "@types/crypto-js": "^4.2.2",
     "@types/md5": "^2.3.5",
-    "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@vicons/fluent": "^0.13.0",
-    "@vitejs/plugin-basic-ssl": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.3",
-    "@vue/cli": "^5.0.8",
     "@vueuse/core": "^13.1.0",
     "@vueuse/integrations": "^13.1.0",
     "@vueuse/router": "^13.1.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "bilibili-live-ws": "^6.3.1",
-    "brotli-compress": "^1.3.3",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "easy-speech": "^2.4.0",
     "echarts": "^5.6.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-oxlint": "^0.16.7",
-    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-oxlint": "^0.16.8",
     "fast-xml-parser": "^5.2.1",
     "file-saver": "^2.0.5",
     "grapheme-splitter": "^1.0.4",
-    "hammerjs": "^2.0.8",
     "html2canvas": "^1.4.1",
     "idb-keyval": "^6.2.1",
     "linqts": "^2.0.0",
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "mitt": "^3.0.1",
     "monaco-editor": "^0.52.2",
-    "music-metadata-browser": "^2.5.11",
     "nanoid": "^5.1.5",
-    "oxlint": "^0.16.7",
     "peerjs": "^1.5.4",
     "pinia": "^3.0.2",
-    "prettier": "^3.5.3",
     "qrcode.vue": "^3.6.0",
-    "queue-typescript": "^1.0.1",
-    "tui-image-editor": "^3.15.3",
     "unplugin-auto-import": "^19.1.2",
     "unplugin-vue-components": "^28.5.0",
     "unplugin-vue-markdown": "^28.3.1",
     "uuid": "^11.1.0",
-    "vite": "6.3.3",
+    "vite": "6.3.4",
     "vite-plugin-oxlint": "^1.3.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "3.5.13",
     "vue-echarts": "^7.0.3",
     "vue-request": "^2.0.4",
-    "vue-router": "^4.5.0",
+    "vue-router": "^4.5.1",
     "vue-turnstile": "^1.0.11",
     "vue3-aplayer": "^1.7.3",
     "vue3-marquee": "^4.2.2",
@@ -87,24 +75,15 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@types/bun": "^1.2.10",
-    "@types/eslint": "^9.6.1",
+    "@types/bun": "^1.2.11",
     "@types/file-saver": "^2.0.7",
-    "@types/obs-studio": "^2.17.2",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/parser": "^8.31.0",
     "@vicons/ionicons5": "^0.13.0",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "@vue-vine/eslint-config": "^0.2.19",
-    "@vue/eslint-config-typescript": "^14.5.0",
-    "eslint": "^9.25.1",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-vue": "^10.0.0",
-    "knip": "^5.50.5",
-    "naive-ui": "^2.41.0",
-    "stylus": "^0.64.0",
+    "eslint": "^9.26.0",
+    "eslint-plugin-vue": "^10.1.0",
     "typescript": "^5.8.3",
-    "vue-vine": "^0.3.21"
+    "vue-vine": "^0.4.4"
   }
 }
