--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "md5": "^2.3.0",
     "mitt": "^3.0.1",
     "monaco-editor": "^0.52.2",
+    "naive-ui": "^2.41.0",
     "nanoid": "^5.1.5",
     "peerjs": "^1.5.4",
     "pinia": "^3.0.2",
