feat: 更新依赖和组件，优化功能实现
- 更新package.json中的TypeScript版本
- 删除不再使用的message_render_content.txt文件
- 在VEditor.vue中移除未使用的常量导入
- 在OBSComponentStoreView.vue中修复用户信息的属性引用
- 在SvgInspector.vue中删除不再使用的组件
- 在PointManage.vue中优化商品模型和表单验证逻辑
- 在WebFetcherOBS.vue中修复webfetcher类型的引用
- 在DefaultIndexTemplate.vue中更新封面配置项类型

--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "eslint": "^9.26.0",
     "eslint-plugin-vue": "^10.1.0",
     "stylus": "^0.64.0",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.0-dev.20250512",
     "vue-vine": "^0.4.4"
   }
 }
