--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tauri-apps/plugin-updater": "^2.7.1",
     "@types/crypto-js": "^4.2.2",
     "@types/md5": "^2.3.5",
+    "@types/vue-cropperjs": "^4.1.6",
     "@vicons/fluent": "^0.13.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vueuse/core": "^13.1.0",
@@ -37,6 +38,7 @@
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "bilibili-live-ws": "^6.3.1",
+    "cropperjs": "^2.0.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "easy-speech": "^2.4.0",
@@ -65,6 +67,7 @@
     "vite-plugin-oxlint": "^1.3.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "3.5.13",
+    "vue-cropperjs": "^5.0.0",
     "vue-echarts": "^7.0.3",
     "vue-request": "^2.0.4",
     "vue-router": "^4.5.1",
