--- a/package.json
+++ b/package.json
@@ -13,84 +13,82 @@
     "@guolao/vue-monaco-editor": "^1.5.5",
     "@hyperdx/browser": "^0.21.2",
     "@hyperdx/cli": "^0.1.0",
-    "@microsoft/signalr": "^8.0.7",
-    "@microsoft/signalr-protocol-msgpack": "^8.0.7",
+    "@microsoft/signalr": "^9.0.6",
+    "@microsoft/signalr-protocol-msgpack": "^9.0.6",
     "@mixer/postmessage-rpc": "^1.1.4",
     "@oneidentity/zstd-js": "^1.0.3",
-    "@tauri-apps/api": "^2.5.0",
-    "@tauri-apps/plugin-autostart": "^2.3.0",
-    "@tauri-apps/plugin-http": "^2.4.4",
-    "@tauri-apps/plugin-log": "^2.4.0",
-    "@tauri-apps/plugin-notification": "^2.2.2",
-    "@tauri-apps/plugin-opener": "^2.2.7",
-    "@tauri-apps/plugin-os": "^2.2.1",
-    "@tauri-apps/plugin-process": "^2.2.1",
-    "@tauri-apps/plugin-store": "^2.2.0",
-    "@tauri-apps/plugin-updater": "^2.7.1",
+    "@tauri-apps/api": "^2.8.0",
+    "@tauri-apps/plugin-autostart": "^2.5.0",
+    "@tauri-apps/plugin-http": "^2.5.2",
+    "@tauri-apps/plugin-log": "^2.7.0",
+    "@tauri-apps/plugin-notification": "^2.3.1",
+    "@tauri-apps/plugin-opener": "^2.5.0",
+    "@tauri-apps/plugin-os": "^2.3.1",
+    "@tauri-apps/plugin-process": "^2.3.0",
+    "@tauri-apps/plugin-store": "^2.4.0",
+    "@tauri-apps/plugin-updater": "^2.9.0",
     "@types/crypto-js": "^4.2.2",
     "@types/md5": "^2.3.5",
     "@types/vue-cropperjs": "^4.1.6",
     "@vicons/fluent": "^0.13.0",
-    "@vitejs/plugin-vue": "^5.2.4",
-    "@vueuse/core": "^13.3.0",
-    "@vueuse/integrations": "^13.3.0",
-    "@vueuse/router": "^13.3.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vueuse/core": "^13.9.0",
+    "@vueuse/integrations": "^13.9.0",
+    "@vueuse/router": "^13.9.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "bilibili-live-ws": "^6.3.1",
-    "cropperjs": "^2.0.0",
+    "cropperjs": "^2.0.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "easy-speech": "^2.4.0",
-    "echarts": "^5.6.0",
-    "eslint-plugin-oxlint": "^0.16.12",
+    "echarts": "^6.0.0",
     "fast-xml-parser": "^5.2.5",
     "file-saver": "^2.0.5",
     "grapheme-splitter": "^1.0.4",
     "html2canvas": "^1.4.1",
-    "jszip": "^3.10.1",
     "idb-keyval": "^6.2.2",
-    "linqts": "^2.0.0",
+    "jszip": "^3.10.1",
+    "linqts": "^3.2.0",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "mitt": "^3.0.1",
-    "monaco-editor": "^0.52.2",
-    "naive-ui": "^2.41.1",
-    "nanoid": "^5.1.5",
+    "monaco-editor": "^0.53.0",
+    "naive-ui": "^2.43.1",
+    "nanoid": "^5.1.6",
     "peerjs": "^1.5.5",
     "pinia": "^3.0.3",
     "qrcode.vue": "^3.6.0",
-    "unplugin-auto-import": "^19.3.0",
-    "unplugin-vue-components": "^28.7.0",
-    "unplugin-vue-markdown": "^28.3.1",
-    "uuid": "^11.1.0",
-    "vite": "6.3.4",
-    "vite-plugin-oxlint": "^1.3.3",
+    "unplugin-auto-import": "^20.2.0",
+    "unplugin-vue-components": "^29.1.0",
+    "unplugin-vue-markdown": "^29.2.0",
+    "uuid": "^13.0.0",
+    "vite": "7.1.7",
     "vite-svg-loader": "^5.1.0",
-    "vue": "3.5.13",
+    "vue": "3.5.22",
     "vue-cropperjs": "^5.0.0",
-    "vue-echarts": "^7.0.3",
+    "vue-echarts": "^8.0.0",
     "vue-request": "^2.0.4",
     "vue-router": "^4.5.1",
     "vue-turnstile": "^1.0.11",
     "vue3-aplayer": "^1.7.3",
     "vue3-marquee": "^4.2.2",
-    "vueuc": "^0.4.64",
-    "worker-timers": "^8.0.22",
+    "vueuc": "^0.4.65",
+    "worker-timers": "^8.0.25",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/bun": "^1.2.16",
+    "@antfu/eslint-config": "^5.4.1",
+    "@types/bun": "^1.2.23",
     "@types/file-saver": "^2.0.7",
     "@types/jszip": "^3.4.1",
-    "@types/uuid": "^10.0.0",
+    "@types/uuid": "^11.0.0",
     "@vicons/ionicons5": "^0.13.0",
-    "@vitejs/plugin-vue-jsx": "^4.2.0",
-    "@vue-vine/eslint-config": "^0.2.20",
-    "eslint": "^9.29.0",
-    "eslint-plugin-vue": "^10.2.0",
+    "@vitejs/plugin-vue-jsx": "^5.1.1",
+    "@vue-vine/eslint-config": "^1.1.9",
+    "eslint": "^9.36.0",
     "stylus": "^0.64.0",
-    "typescript": "^5.9.0-dev.20250614",
-    "vue-vine": "^0.4.4"
+    "typescript": "^5.9.2",
+    "vue-vine": "^1.7.6"
   }
 }
