--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@vueuse/router": "^13.9.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
-    "bilibili-live-ws": "^6.3.1",
+    "bilibili-live-danmaku": "^0.7.14",
     "cropperjs": "^2.0.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
@@ -55,7 +55,7 @@
     "md5": "^2.3.0",
     "mitt": "^3.0.1",
     "monaco-editor": "^0.53.0",
-    "naive-ui": "^2.43.1",
+    "naive-ui": "2.42.0",
     "nanoid": "^5.1.6",
     "peerjs": "^1.5.5",
     "pinia": "^3.0.3",
