feat: 添加定期更新检查功能并优化相关逻辑；调整 ESLint 配置以放宽类型检查规则

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,20 @@
     "resolveJsonModule": true,
     "types": ["node", "vue-vine/macros", "jszip"],
     "allowJs": false,
-    "strict": true,
+    "strict": false,
+    "alwaysStrict": false,
+    "noImplicitAny": false,
+    "noImplicitThis": false,
+    "strictBindCallApply": false,
+    "strictFunctionTypes": false,
+    "strictNullChecks": false,
+    "strictPropertyInitialization": false,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "sourceMap": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "skipLibCheck": true,
+    "sourceMap": true
   },
   "references": [{ "path": "./tsconfig.node.json" }],
   "include": [
