feat: enhance song management and notification features
- Updated SongList.vue to enable default sorting with a boolean flag.
- Modified TempComponent.vue to include useNotification for better user feedback.
- Refined useLiveRequest.ts to enforce type safety on song request settings.
- Adjusted RTCClient.ts to improve event handling and connection logic.
- Enhanced useVTsuruHub.ts to ensure SignalR connection is awaited during initialization.
- Improved ManageLayout.vue by reorganizing menu options for better user experience.
- Added folder scanning functionality in SongListManageView.vue for importing songs from local directories.
- Implemented OBS notification system in various OBS-related components for real-time updates.
- Removed outdated documentation files related to local question saving functionality.
- Introduced a new store useOBSNotification.ts to manage OBS notifications effectively.

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "vue-echarts": "^8.0.0",
     "vue-request": "^2.0.4",
     "vue-router": "^4.5.1",
+    "vue-toastification": "^1.7.14",
     "vue-turnstile": "^1.0.11",
     "vue3-aplayer": "^1.7.3",
     "vue3-marquee": "^4.2.2",
