--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@tauri-apps/plugin-updater": "^2.9.0",
     "@types/crypto-js": "^4.2.2",
     "@types/md5": "^2.3.5",
-    "@types/vue-cropperjs": "^4.1.6",
     "@vicons/fluent": "^0.13.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vueuse/core": "^13.9.0",
@@ -38,7 +37,6 @@
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "bilibili-live-danmaku": "^0.7.14",
-    "cropperjs": "^2.0.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "easy-speech": "^2.4.0",
@@ -68,8 +66,8 @@
     "vite-plugin-monaco-editor-nls": "^3.0.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "3.5.22",
-    "vue-cropperjs": "^5.0.0",
     "vue-echarts": "^8.0.0",
+    "vue-img-cutter": "^3.0.7",
     "vue-request": "^2.0.4",
     "vue-router": "^4.5.1",
     "vue-toastification": "^1.7.14",
