--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
     "knip": "knip"
   },
   "dependencies": {
-    "@hyperdx/browser": "^0.21.2",
+    "@hyperdx/browser": "^0.22.0",
     "@hyperdx/cli": "^0.1.0",
-    "@microsoft/signalr": "^9.0.6",
-    "@microsoft/signalr-protocol-msgpack": "^9.0.6",
+    "@microsoft/signalr": "^10.0.0",
+    "@microsoft/signalr-protocol-msgpack": "^10.0.0",
     "@mixer/postmessage-rpc": "^1.1.4",
     "@oneidentity/zstd-js": "^1.0.3",
-    "@tauri-apps/api": "^2.8.0",
-    "@tauri-apps/plugin-autostart": "^2.5.0",
-    "@tauri-apps/plugin-http": "^2.5.2",
-    "@tauri-apps/plugin-log": "^2.7.0",
-    "@tauri-apps/plugin-notification": "^2.3.1",
-    "@tauri-apps/plugin-opener": "^2.5.0",
-    "@tauri-apps/plugin-os": "^2.3.1",
-    "@tauri-apps/plugin-process": "^2.3.0",
-    "@tauri-apps/plugin-store": "^2.4.0",
+    "@tauri-apps/api": "^2.9.0",
+    "@tauri-apps/plugin-autostart": "^2.5.1",
+    "@tauri-apps/plugin-http": "^2.5.4",
+    "@tauri-apps/plugin-log": "^2.7.1",
+    "@tauri-apps/plugin-notification": "^2.3.3",
+    "@tauri-apps/plugin-opener": "^2.5.2",
+    "@tauri-apps/plugin-os": "^2.3.2",
+    "@tauri-apps/plugin-process": "^2.3.1",
+    "@tauri-apps/plugin-store": "^2.4.1",
     "@tauri-apps/plugin-updater": "^2.9.0",
     "@types/crypto-js": "^4.2.2",
-    "@types/md5": "^2.3.5",
+    "@types/md5": "^2.3.6",
     "@vicons/fluent": "^0.13.0",
     "@vitejs/plugin-vue": "^6.0.1",
-    "@vueuse/core": "^13.9.0",
-    "@vueuse/integrations": "^13.9.0",
-    "@vueuse/router": "^13.9.0",
+    "@vueuse/core": "^14.0.0",
+    "@vueuse/integrations": "^14.0.0",
+    "@vueuse/router": "^14.0.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "bilibili-live-danmaku": "^0.7.14",
@@ -41,7 +41,7 @@
     "date-fns": "^4.1.0",
     "easy-speech": "^2.4.0",
     "echarts": "^6.0.0",
-    "fast-xml-parser": "^5.2.5",
+    "fast-xml-parser": "^5.3.2",
     "file-saver": "^2.0.5",
     "grapheme-splitter": "^1.0.4",
     "html2canvas": "^1.4.1",
@@ -52,24 +52,25 @@
     "lodash-es": "^4.17.21",
     "md5": "^2.3.0",
     "mitt": "^3.0.1",
-    "monaco-editor": "^0.53.0",
-    "naive-ui": "2.42.0",
+    "monaco-editor": "^0.54.0",
+    "naive-ui": "2.43.2",
     "nanoid": "^5.1.6",
+    "obs-websocket-js": "^5.0.7",
     "peerjs": "^1.5.5",
-    "pinia": "^3.0.3",
+    "pinia": "^3.0.4",
     "qrcode.vue": "^3.6.0",
     "unplugin-auto-import": "^20.2.0",
-    "unplugin-vue-components": "^29.1.0",
+    "unplugin-vue-components": "^30.0.0",
     "unplugin-vue-markdown": "^29.2.0",
     "uuid": "^13.0.0",
-    "vite": "npm:rolldown-vite@latest",
+    "vite": "npm:rolldown-vite@7.2.5",
     "vite-plugin-monaco-editor-nls": "^3.0.1",
     "vite-svg-loader": "^5.1.0",
-    "vue": "3.5.22",
-    "vue-echarts": "^8.0.0",
+    "vue": "3.5.24",
+    "vue-echarts": "^8.0.1",
     "vue-img-cutter": "^3.0.7",
     "vue-request": "^2.0.4",
-    "vue-router": "^4.5.1",
+    "vue-router": "^4.6.3",
     "vue-toastification": "^1.7.14",
     "vue-turnstile": "^1.0.11",
     "vue3-aplayer": "^1.7.3",
@@ -79,22 +80,22 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^5.4.1",
-    "@types/bun": "^1.2.23",
+    "@antfu/eslint-config": "^6.2.0",
+    "@types/bun": "^1.3.2",
     "@types/file-saver": "^2.0.7",
     "@types/jszip": "^3.4.1",
     "@types/uuid": "^11.0.0",
     "@vicons/ionicons5": "^0.13.0",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
-    "@vue-vine/eslint-config": "^1.1.9",
-    "eslint": "^9.36.0",
-    "eslint-plugin-oxlint": "^1.19.0",
-    "oxlint": "^1.19.0",
-    "rollup-plugin-visualizer": "^6.0.4",
+    "@vue-vine/eslint-config": "^1.1.11",
+    "eslint": "^9.39.1",
+    "eslint-plugin-oxlint": "^1.28.0",
+    "oxlint": "^1.28.0",
+    "rollup-plugin-visualizer": "^6.0.5",
     "stylus": "^0.64.0",
-    "typescript": "^5.9.2",
+    "typescript": "^5.9.3",
     "vite-plugin-cdn-import": "^1.0.1",
     "vscode-loc": "git+https://github.com/microsoft/vscode-loc.git",
-    "vue-vine": "^1.7.6"
+    "vue-vine": "^1.7.23"
   }
 }
