--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "md5": "^2.3.0",
     "mitt": "^3.0.1",
     "monaco-editor": "^0.54.0",
-    "naive-ui": "2.43.2",
+    "naive-ui": "^2.43.2",
     "nanoid": "^5.1.6",
     "obs-websocket-js": "^5.0.7",
     "peerjs": "^1.5.5",
