--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-store": "^2.4.1",
     "@tauri-apps/plugin-updater": "^2.9.0",
+    "@tsparticles/slim": "^3.9.1",
+    "@tsparticles/vue3": "^3.0.1",
     "@types/crypto-js": "^4.2.2",
     "@types/md5": "^2.3.6",
     "@vicons/fluent": "^0.13.0",
@@ -81,6 +83,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.2.0",
+    "@tsparticles/engine": "^3.9.1",
     "@types/bun": "^1.3.2",
     "@types/file-saver": "^2.0.7",
     "@types/jszip": "^3.4.1",
