--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "vue-turnstile": "^1.0.11",
     "vue3-aplayer": "^1.7.3",
     "vue3-marquee": "^4.2.2",
+    "vuedraggable-es": "^4.1.0",
     "vueuc": "^0.4.65",
     "worker-timers": "^8.0.25",
     "xlsx": "^0.18.5"
