feat: 增强用户页面构建器的背景和样式配置
- 在多个组件中引入背景设置，支持动态背景切换
- 更新 BlockCard 组件以支持背景属性，提升视觉效果
- 优化用户页面构建器的布局和样式，确保一致性和可读性
- 清理未使用的代码，提升项目整洁性

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
+    "incremental": true,
     "resolveJsonModule": true,
     "types": ["node", "vue-vine/macros", "jszip"],
     "allowJs": false,
